# WatchUI

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEV_NOTES.md  Dockerfile  Gemfile  LICENSE  License.md  Pipfile  README.md  _config.yml  code_of_conduct.md  contributing.md  index.html  license.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  support.md  t.md  tasks.py  v.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: issue-bug-report.md
.github/workflows/: Documentation.yml  action.yml  code-formatter.yml  main.yml  python-publish.yml  stale.yml
Docker/: Dockerfile  run-test.sh
Robot framework/: log.html  output.xml  report.html  test.robot
Samples/: test.robot  unit_test.robot
Samples/keywords/: CS.robot  CS_2SavedImage.robot  CS_CreateScreens.robot  CS_region.robot  Variable.robot
WatchUI/: WatchUI.py  WatchUIPlaywright.py  WatchUISelenium.py  __init__.py  libs.py  robotframework.py  teseract.py  unit_test.robot  watch_ui.py
WatchUI/IBasics/: Basics.py
WatchUI/Ibasic/: IBasic.py  __init__.py
_doc/: changelog.md  community.md  credits.md  index.md  keywords.md  legal.md  license.md  news.md  rf_documentation.md  start.md
_posts/: 2016-04-26-version-1-0.md  2016-06-15-version-1-1.md  2017-07-07-jekyll-theme.md
docs/: WatchUI.html  index.html  index.rst  index.xml
documentation/: WatchUI.html
examples/browser/: .gitignore  README.md  pyproject.toml
examples/browser/tests/: example_tests.robot
resource/: resource.robot
rf_documentation/: index.html
tests/: log.html  output.xml  report.html  resources.robot  resources_keywords_v2.robot  resources_tests_v2.robot  test.robot  tests_v2.robot  unit_test.robot  unit_test_playwright.robot  unit_test_playwright_compare_screen.robot  unit_test_selenium.robot  variables.robot
unittests/: unit_test.robot
(+84 files in other folders)
