[tool.poetry]
name = "WatchUI"
version = "2.0.10"
description = "RobotFramework library package for automated visual testing."
readme = "README.md"
repository = "https://github.com/Tesena-smart-testing/WatchUI"
documentation = "https://tesena-smart-testing.github.io/WatchUI/"
authors = ["Jan Egermaier <jan.egermaier@tesena.com>", "Radek Bednarik <radek.bednarik@tesena.com>", "Michal Jirka <michal.jirka@tesena.com>", "Marcel Veselka <marcel.veselka@tesena.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "WatchUI/" }
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
opencv-python = "*"
pandas = "*"
Pillow = "*"
numpy = "*"
scikit-image = "*"
scikit-learn = "*"
imutils = "*"
robotframework = "*"
PyMuPDF = "*"
pytesseract = "*"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pylint = "^2.9.6"
isort = "^5.9.3"
pytest = "^6.2.5"
PyHamcrest = "^2.0.2"
lizard = "^1.17.9"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
docs = "tasks:docs"
test = "tasks:test"

